# BunCord

./: README.md  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
